# skymp-vr

./: CMakeLists.txt  vcpkg.json
cmake/: link_vcpkg_dependencies.cmake
overlay_ports/commonlibvr/: CMakeLists.txt  portfile.cmake
skymp5-scripts/pex/: ActiveMagicEffect.pex
skyrim-platform/: CMakeLists.txt
skyrim-platform/src/platform_vr/: CMakeLists.txt
unit/papyrus_test_files/pex/: AAATestObject.pex  LatentTest.pex  OpcodesTest.pex
