if(SKYRIM_VR)
	project(platform_vr)
else()
	project(platform_se)
endif()

set(DEV_SERVICE_CFG_PATH "tools/dev_service/config.js")
file(WRITE ${DEV_SERVICE_CFG_PATH} "")
file(APPEND ${DEV_SERVICE_CFG_PATH} "module.exports = {\n")
if(SKYRIM_VR)
	file(APPEND ${DEV_SERVICE_CFG_PATH} "  SkyrimVRFolder:\n")
else()
	file(APPEND ${DEV_SERVICE_CFG_PATH} "  SkyrimSEFolder:\n")
endif()
file(APPEND ${DEV_SERVICE_CFG_PATH} "    '${SKYRIM_DIR}',\n")
file(APPEND ${DEV_SERVICE_CFG_PATH} "};\n")

set(SKYRIM_PLATFORM_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(src/platform_lib _platform_lib)
if(SKYRIM_VR)
	add_subdirectory(src/platform_se _platform_se)
else()
	add_subdirectory(src/platform_vr _platform_vr)
endif()

